fixed ui z-index

--- a/cube_walking.css
+++ b/cube_walking.css
@@ -25,6 +25,7 @@ div#ui {
     margin: 10px;
     border: 1px solid rgb(128,128,128);
     background-color: rgba(192,192,192,0.75);
+    z-index: 100;
 }
 div#ui table {
     margin: 5px;
